# osakamenesu

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE_CODE_MAX_CHECKLIST.md  CLAUDE_GITHUB_SETUP.md  CLAUDE_MAX_TEST_RESULTS.md  CLAUDE_MENTION_IMPROVEMENTS.md  CLAUDE_RUNNER_SUCCESS.md  Dockerfile  README.md  README_TwExport.md  README_figma_bot.md  RUN_TEST_WORKFLOW.md  Taskfile.fixed.yml  Taskfile.yml  WORKFLOW_DIRECT_LINKS.md  accounts.json  accounts.yaml  after_submit.html  auto_marshmallow_post.py  credentials.json  debug_extract_items.py  debug_extract_items_detailed.py  debug_extract_items_fixed.py  debug_qa_parsing.py  debug_regex_split.py  docker-compose.test.yml  download_images_using_cookie.py  fix_csv.py  fix_refresh_311.yml  generate_message_url_list.py  generate_recruit_posts.py  get-oauth-tokens.js  install-claude-cli-runner.sh  install-claude-code.sh  install-claude-local.sh  kakeru.py  (+49 more)
.devin/: hand-off.md
.docs/: ai_review_guidelines.md
bot/: __init__.py  csv_to_markdown.py  main.py  md2queue.py  md2queue_fixed.py  patch_and_render.py  qa_sheet_polite_fixed.csv  schedule.py
data/: sample_shops.yaml
debug/: page_after_navigate_0.html  page_before_compose_0.html  page_before_compose_1.html  page_before_navigate_0.html  page_before_navigate_1.html
diary-platform/: .gitignore  README.md  app.py  requirements.txt
docs/: README.md  X投稿機能テストマニュアル.md  X投稿機能マニュアル.md  X投稿機能マニュアル_複数動画対応.md  admin-dashboard-therapist-api.md  backlog.md  claude-api-authentication-fix.md  claude-cli-runner-setup.md  claude-max-oauth-setup.md  (+14 more)
(+5781 files in other folders)
